# deusCL

./: .gitignore  LICENSE  README.md
Frontend/: Cargo.toml  index.html  index.js  submit.js
Frontend/src/: main.rs
Research/: PRINCIPLES.md  RUST.md
code/: Cargo.toml
code/src/: environment.rs  expression.rs  functions.rs  generate_visitors.rs  interpreter.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs  tokenizer.rs  types.rs  visitors.rs
repl/: .gitignore  Cargo.toml
repl-backend/: Cargo.toml  history.txt
repl-backend/src/: expression.rs  main.rs
website/: .gitignore  Cargo.toml  README.md  index.html
website/repl-backend/: Cargo.toml
website/repl-backend/src/: lib.rs  repl.rs  token.rs
website/src/: main.rs
