[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"code" = { path = "repl-backend/" }
yew = "0.19"
wasm-logger = "0.2.0"
log = "0.4.6"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'HtmlButtonElement',
  'HtmlFormElement',
  'EventTarget',
  'Node',
  'Window',
  'HtmlCollection'
  ]
